--- a/templates/signin.html
+++ b/templates/signin.html
@@ -8,7 +8,7 @@
 	</form>
 	<div id="signin-notification" ng-show="showSignInNotif">
 		<div class="alert alert-danger">
-			Failed to sign in. Please try again.
+			{{notifMessage}}
 		</div>
 	</div>
 </div>
